Export one more package from javafx