@@ -26,6 +26,7 @@ allprojects {
         kotlin_version = "1.7.21"
         javaExportOptions = [
             '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+            '--add-exports', 'javafx.base/com.sun.javafx.event=ALL-UNNAMED',
             '--add-exports', 'javafx.base/com.sun.javafx=ALL-UNNAMED',
             '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
             '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED',
